--- a/app/src/main/res/layout/help_me_fragment.xml
+++ b/app/src/main/res/layout/help_me_fragment.xml
@@ -4,4 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/help_me_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="help me"/>
+
 </LinearLayout>
