end point choosing functionality copied with minor changes

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,17 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!-- Base application theme. -->
+    <!--  Base application theme.  -->
     <style name="SaveALifeTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="android:textColorPrimary">@android:color/black</item>
         <item name="android:textColorPrimaryInverse">@color/text_light</item>
         <item name="android:textColor">@color/text_dark</item>
     </style>
     <style name="SaveALifeTheme.Green" parent="SaveALifeTheme">
-        <item name="colorPrimary">@color/theme_green_primary</item>
-        <item name="colorPrimaryDark">@color/theme_green_primary_dark</item>
+        <item name="android:colorPrimary">@color/theme_green_primary</item>
+        <item name="android:colorPrimaryDark">@color/theme_green_primary_dark</item>
         <item name="android:textColorPrimary">@color/theme_green_text</item>
+        <item name="android:statusBarColor">@color/theme_green_primary_dark</item>
         <item name="android:windowBackground">@color/theme_green_background</item>
-        <item name="colorAccent">@color/theme_green_accent</item>
+        <item name="android:colorAccent">@color/theme_green_accent</item>
     </style>
-
 </resources>
