application colors changed

--- a/app/src/main/res/layout-v21/help_me_fragment.xml
+++ b/app/src/main/res/layout-v21/help_me_fragment.xml
@@ -14,7 +14,7 @@
         app:pulse_count="4"
         app:pulse_duration="7000"
         app:pulse_repeat="0"
-        app:pulse_color="?android:colorPrimary"
+        app:pulse_color="?android:colorAccent"
         app:pulse_startFromScratch="false"
         android:visibility="invisible">
 
@@ -28,7 +28,7 @@
         app:pulse_count="4"
         app:pulse_duration="7000"
         app:pulse_repeat="0"
-        app:pulse_color="@color/pulsator_red"
+        app:pulse_color="?android:colorPrimary"
         app:pulse_startFromScratch="false">
 
 
