--- a/app/src/main/res/layout/page_activity.xml
+++ b/app/src/main/res/layout/page_activity.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="50dp"
-        android:background="?colorPrimaryDark">
+        android:background="@color/colorPrimaryDark">
 
         <LinearLayout
             android:layout_width="match_parent"
