--- a/app/src/main/res/layout/end_point_fragment.xml
+++ b/app/src/main/res/layout/end_point_fragment.xml
@@ -3,20 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:segmentedgroup="http://schemas.android.com/tools"
     android:orientation="vertical">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/endpoint_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary">
-
-        <Spinner
-            android:id="@+id/durations_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </android.support.v7.widget.Toolbar>
 
     <fragment
         android:id="@+id/place_autocomplete_fragment"
@@ -35,6 +23,44 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|left"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="6dp">
+
+            <info.hoang8f.android.segmented.SegmentedGroup
+                android:id="@+id/rg_mode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                segmentedgroup:sc_tint_color="@color/colorPulsatorGreen"
+                segmentedgroup:sc_border_width="1dp"
+                segmentedgroup:sc_corner_radius="10dp">
+
+                <RadioButton
+                    android:id="@+id/rb_driver"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/driver_rb"
+                    style="@style/RadioButton"
+                    android:checked="true"/>
+
+                <RadioButton
+                    android:id="@+id/rb_ambulance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/ambulance_rb"
+                    style="@style/RadioButton"/>
+
+            </info.hoang8f.android.segmented.SegmentedGroup>
+
+        </RelativeLayout>
+
         <com.dd.morphingbutton.impl.LinearProgressButton
             android:id="@+id/morph_btn"
             android:layout_width="wrap_content"
@@ -50,6 +76,7 @@
             android:layout_gravity="bottom|right"
             android:layout_margin="16dp"
             android:src="@drawable/ic_location_searching_black_24dp"
-            app:layout_anchorGravity="bottom|right|end" />
+            app:layout_anchorGravity="bottom|right|end"
+            app:backgroundTint="@color/colorAccent"/>
     </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
