--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,12 @@
     <color name="colorPrimary">#F44336</color>
     <color name="colorPrimaryDark">#D32F2F</color>
     <color name="colorPrimaryLight">#FFCDD2</color>
-    <color name="colorAccent">#4CAF50</color>
+    <color name="colorAccent">#607D8B</color>
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryText">#757575</color>
     <color name="colorText">#FFFFFF</color>
     <color name="colorDivider">#BDBDBD</color>
     <color name="colorBackground">@color/colorText</color>
+    <color name="colorPulsatorGreen">#4CAF50</color>
+    <color name="colorButtonPressed">#37474f</color>
 </resources>
