--- a/app/src/main/res/layout/drivers_map_activity.xml
+++ b/app/src/main/res/layout/drivers_map_activity.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        android:name="com.google.android.gms.maps.MapFragment"
-        android:id="@+id/map_fragment"
+    <FrameLayout
+        android:id="@+id/drivers_help_fl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+    </FrameLayout>
 
 </LinearLayout>
